# long-double

./: ChangeLog.md  long-double.cabal
aarch64/Numeric/: LongDouble.hs
arm/Numeric/: LongDouble.hs
c/: ld128.c  longdouble.c
hs/Numeric/LongDouble/: ARM_128.hs  ARM_64.hs  LD128.hs  X87.hs  X87_128.hs  X87_96.hs
i386/Numeric/: LongDouble.hs
x86_64/Numeric/: LongDouble.hs
