name:                long-double
version:             0.1.0.0
synopsis:            FFI bindings for C long double
description:
  This package provides a LongDouble type, being 80bits of x87 data taking up
  128bits of space on x86_64.  It does not provide a CLDouble type -- this
  needs to be done in the compiler.
  See <https://ghc.haskell.org/trac/ghc/ticket/3353>.

homepage:            https://code.mathr.co.uk/long-double
license:             BSD3
license-file:        LICENSE
author:              Claude Heiland-Allen
maintainer:          claude@mathr.co.uk
copyright:           (c) 2018 Claude Heiland-Allen
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Numeric.LongDouble.LD128
  build-depends:
    base >=4.9 && <4.11,
    integer-gmp >=1.0 && <1.1
  c-sources:           c/ld128.c
  hs-source-dirs:      hs
  default-language:    Haskell2010
  other-extensions:
    ForeignFunctionInterface,
    MagicHash
